# src/modules/validateAddressIsReal/dto/address.dto.ts
@@ -1,11 +1,11 @@
 import * as Joi from 'joi';
 
 export interface IAddressDTO {
-  street: string;
-  streetName: string;
-  city: string;
-  postalCode: string;
-  country: string;
+  street?: string;
+  streetName?: string;
+  city?: string;
+  postalCode?: string;
+  country?: string;
   lon?: string;
   lat?: string;
 }
@@ -19,12 +19,12 @@ export interface IAddressQueryDTO {
 }
 
 export const validateIAddressDTOSchema = Joi.object({
-  street: Joi.string().min(3).max(25).required(),
-  streetNumber: Joi.string().min(1).max(25).required(),
-  city: Joi.string().min(1).max(25).required(),
-  postalCode: Joi.string().min(3).max(25).required(),
-  country: Joi.string().min(3).max(25).required(),
-  town: Joi.string().min(3).max(25).required(),
+  street: Joi.string().min(3).max(25),
+  streetNumber: Joi.string().min(1).max(25),
+  city: Joi.string().min(1).max(25),
+  postalCode: Joi.string().min(3).max(25),
+  country: Joi.string().min(3).max(25),
+  town: Joi.string().min(3).max(25),
   lon: Joi.string().min(3).max(25),
   lat: Joi.string().min(3).max(25),
 });
